--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,15 +6,23 @@ on:
       - master
 
 jobs:
-  build:
+  build-and-deploy:
 
     runs-on: ubuntu-18.04
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo Hello, world!
-    - name: Run a multi-line script
+    - name: Setup Ruby for use with actions
+      uses: actions/setup-ruby@v1.0.0
+      
+    - name: Install Jekyll and bundler
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        gem install jekyll bundler
+    - name: DEBUG
+      run: |
+        echo $PWD,
+        echo ls
+    - name: Generate site
+      run: |
+        jekyll build 
+        
