--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,30 @@
-theme: minimal-mistakes-jekyll
+# theme: minimal-mistakes-jekyll
+theme: minima
+minima:
+  skin: dark
+minimal_mistakes_skin: dark
+description: |
+  tmp
+# paginate: 5 # amount of posts to show
+# paginate_path: /page:num/
+# show_excerpts: true
+defaults:
+  # _posts
+  - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+      author_profile: true
+      read_time: true
+      comments: true
+      # share: true
+      related: true
 include: 
   - _pages
+# collections:
+  # portfolio:
+    # output: true
+    # permalink: /:collection/:path/
 exclude:
   - e_*
