--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ description: |
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
 # show_excerpts: true
+title: 1stDimension's blog
 defaults:
   # _posts
   - scope:
