Adding jekkyl-feed to plugins in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,8 @@ description: |
 # paginate_path: /page:num/
 # show_excerpts: true
 title: 1stDimension's blog
+plugins:
+  - jekyll-feed
 defaults:
   # _posts
   - scope:
