--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,15 @@
 theme: minima
 minima:
   skin: dark
+  social_links:
+    github: 1stDimension
 minimal_mistakes_skin: dark
 description: |
   tmp
 # paginate: 5 # amount of posts to show
 # paginate_path: /page:num/
-# show_excerpts: true
-title: 1stDimension's blog
+show_excerpts: true
+title: X-axis
 plugins:
   - jekyll-feed
 defaults:
@@ -18,6 +20,7 @@ defaults:
       type: posts
     values:
       layout: post
+      excerpt_separator: <!--END_EXCERPT-->
       author_profile: true
       read_time: true
       comments: true
