Changing newlines in description

--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,7 @@ minima:
   skin: dark
   date_format: "%F"
   social_links:
-    github: 1stDimension
-minimal_mistakes_skin: dark
-description: |
+description: >
   Personal blog (eventually) about
   broadly understood computer science.
   For now using Jekyll, hosted on Github pages.
