Adding history to header

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ author: *me
 header_pages:
   - _pages/about.md
   - index.md    
+  - History.md
 description: >
   Personal blog (eventually) about
   broadly understood computer science.
