--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ title: X-axis
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-diagrams
   # - jekyll-scholar
   # - jekyll-assets
   - jemoji
